--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".GetResources" />
+        <activity android:name=".Donate" />
+        <activity android:name=".Volunteer"></activity>
     </application>
 
 </manifest>
