--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,23 +7,30 @@
     <uses-permission android:name="android.permission.READ_SMS"/>
 
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GetResources" />
-        <activity android:name=".Donate" />
-        <activity android:name=".Volunteer" />
+        <activity android:name=".GetResources"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Donate"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Volunteer"
+            android:screenOrientation="portrait"/>
         <activity android:name=".News"
-            android:label="News"/>
+            android:label="News"
+            android:screenOrientation="portrait"/>
         <!--
              ATTENTION: This was auto-generated to add Google Play services to your project for
              App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information.
